# ada-order-pilot

./: .env.example  .gitignore  README.md  pyproject.toml
ada_order_pilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: db.py  llm_client.py  main.py  product_seed.py  repository.py  schemas.py  service.py  template_export.py
app/static/: admin.css  index.html  orders.html  products.html  recipients.html  senders.html
tests/: test_api.py
